# nix-propagation-build-time-only

./: default.nix
example/: example.cpp  meson.build
lib/: amazing.cpp  amazing.hpp  meson.build
